# X_Programming

./: AppImageBuilder.yml  CMakeLists.txt  load_image.h  main.c  manipulate_image.c  outline.c  process_svg.cpp  svg_viewer.c
sample/: a.out  xdraw.c  xdraw_ascii.c  xdraw_sin.c  xdraw_sub.c  xdrawpoints.c  xkeyinput.c  xsin_m.c
sample/teisyutsu/: 01_akiyoshi.c  02_JumpRope.c  03_graph.c  04_ball.c  05_Oblique projection.c  06_xdraw_rep.c  08_LastRagnarok.c  10_jisaku.c  12_Perlin3D.c  16_bbbb.c  17_sugisaki.c  19_spiral.c  20_herona.c  22_combsortsystem.c  23_niji.c  24_sincostan2.c  26_nageoroshi.c  27_qfunction.c  28_orbit.c  29_kadai.c  30_hidaka.c  31_NorderDifferential.c  33_Hoshiya_wave.c  34_Space_Simulation_System.c  35_sort.c  36_vecton.c  37_DrawFunctionGraph.c  38_LissajousDraw.c  39_yoshikawa.c  40_Yoshida.c  a.out
sample/teisyutsu/07_kadai/: 07_variable.h  07_wave.c  a.out
sample/teisyutsu/14_AirHockey/: readme
sample/teisyutsu/21_HIDAKA/: ttt.h  xdraw_eee.c
sample/teisyutsu/25_nagai/: ball.c  ball.h  main.c
sample/teisyutsu/32_BlockBreaker/: 32_main.c  Ball.h  Blocks.h  Display.h  EventManeger.h  Parameters.h  Physics.h  Slider.h  a.out  readme.txt
sample/teisyutsu/41_yoshimura/: 41_object1.txt  41_readme.txt  41_yoshimura.c  a.out
