cmake_minimum_required(VERSION 3.21)
project(X_Programming)

set(CMAKE_CXX_STANDARD 17)
find_package(OpenMP REQUIRED)
if (OpenMP_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif ()

add_executable(X_Programming main.c)
target_link_libraries(X_Programming X11)
target_link_libraries(X_Programming m)
add_executable(xdraw sample/xdraw.c)
target_link_libraries(xdraw X11)
target_link_libraries(xdraw m)
add_executable(Perlin3D sample/teisyutsu/12_Perlin3D.c)
target_link_libraries(Perlin3D X11)
target_link_libraries(Perlin3D m)
add_executable(xdraw_ascii sample/xdraw_ascii.c)
target_link_libraries(xdraw_ascii X11)