cmake_minimum_required(VERSION 3.21)
project(X_Programming)

set(CMAKE_CXX_STANDARD 17)
find_package(OpenMP REQUIRED)
if (OpenMP_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif ()


find_package(EXPAT 2.2.8 MODULE REQUIRED)

add_executable(X_Programming main.c)
target_link_libraries(X_Programming X11)
target_link_libraries(X_Programming m)
add_executable(xdraw sample/xdraw.c)
target_link_libraries(xdraw X11)
target_link_libraries(xdraw m)
# add_executable(Perlin3D sample/teisyutsu/12_Perlin3D.c)
# target_link_libraries(Perlin3D X11)
# target_link_libraries(Perlin3D m)
add_executable(xdraw_ascii sample/xdraw_ascii.c)
target_link_libraries(xdraw_ascii X11)
# add_executable(svg_viewer svg_viewer.c)
# target_link_libraries(svg_viewer X11)
# target_link_libraries(svg_viewer m)
# target_link_libraries(svg_viewer EXPAT::EXPAT)
# add_executable(outline outline.c process_svg.cpp)
# target_link_libraries(outline EXPAT::EXPAT)
# add_executable(process_svg process_svg.cpp)
# target_link_libraries(process_svg python3.9)
# include_directories(process_svg /usr/include/python3.9/)
# target_link_libraries(process_svg boost_python39)
add_executable(image_view manipulate_image.c)
include_directories(image_view /usr/include/ImageMagick-6/)
include_directories(image_view /usr/include/x86_64-linux-gnu/ImageMagick-6)
target_link_libraries(image_view MagickWand-6.Q16)
target_link_libraries(image_view X11)
set(MAGICKCORE_QUANTUM_DEPTH 16)
